--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "JMTHON",
-  "description": " Arabic jmthonc Powerful & Safe based on Telethon",
-  "logo": "https://telegra.ph/file/d90dfa4c680c0d0d2e652.jpg",
+  "name": "سـورس سـيـمـو",
+  "description": "أللهم صلى وسلم وبارك على سيدنا محمد وعلى آله سيدنا محمد ",
+  "logo": "https://telegra.ph/file/a344512d4ff51de3c2e17.jpg",
   "keywords": [
     "plugin",
     "modular",
